testsuite/tests/typecheck/should_fail/tcfail018.hs


module ShouldFail where

(a:[]) = 1
