testsuite/tests/typecheck/should_fail/tcfail018.stderr

tcfail018.hs:5:10: error:
    • No instance for (Num [a0]) arising from the literal ‘1’
    • In the expression: 1
      In a pattern binding: (a : []) = 1
